@@ -1,0 +1,3 @@
+gems:
+- buildr-iidea
+
