@@ -14,3 +14,4 @@ ctms-commons history
 ### all
 
 - Begin formal changelog
+- Convert from maven2 to buildr
